<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quiz_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?category_background_color"
    tools:background="@color/literature_dark">

    <View
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="@dimen/menu_height"
        android:background="?category_menu_color"
        tools:background="@color/literature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottomBar"
        android:layout_width="0dp"
        android:layout_height="@dimen/menu_height"
        android:background="?category_menu_color"
        tools:background="@color/literature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/showHint"
        style="@style/jokerButtonStyle"
        android:layout_marginStart="32dp"
        android:background="@drawable/ripple"
        android:text="?"
        app:layout_constraintBottom_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="@id/topBar"
        app:layout_constraintTop_toTopOf="@id/topBar" />

    <Button
        android:id="@+id/half"
        style="@style/jokerButtonStyle"
        android:background="@drawable/ripple"
        android:text="@string/half"
        app:layout_constraintBottom_toBottomOf="@+id/topBar"
        app:layout_constraintStart_toEndOf="@id/showHint"
        app:layout_constraintTop_toTopOf="@id/topBar" />

    <TextView
        android:id="@+id/time"
        style="@style/timerStyle"
        android:layout_marginEnd="@dimen/margin_standard"
        android:background="@drawable/timer_background"
        app:layout_constraintBottom_toBottomOf="@+id/topBar"
        app:layout_constraintEnd_toStartOf="@+id/score"
        app:layout_constraintTop_toTopOf="@+id/topBar"
        tools:text="@string/_60" />

    <TextView
        android:id="@+id/score"
        style="@style/scoreStyle"
        android:layout_marginEnd="@dimen/margin_standard"
        android:background="@drawable/score_background"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/topBar"
        app:layout_constraintEnd_toEndOf="@+id/topBar"
        app:layout_constraintTop_toTopOf="@+id/topBar" />

    <ImageButton
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:elevation="@dimen/button_elevation"
        android:outlineSpotShadowColor="@color/grey"
        android:background="@android:color/transparent"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/bottomBar"
        app:layout_constraintEnd_toStartOf="@id/submit"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/topBar"
        app:layout_constraintTop_toTopOf="@+id/bottomBar"
        app:srcCompat="@drawable/ic_home" />

    <ImageButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:background="@android:color/transparent"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="@dimen/padding_standard"
        android:elevation="@dimen/button_elevation"
        android:outlineSpotShadowColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/bottomBar"
        app:layout_constraintEnd_toStartOf="@id/next"
        app:layout_constraintStart_toEndOf="@id/categories"
        app:layout_constraintTop_toTopOf="@+id/bottomBar"
        app:srcCompat="@drawable/ic_checkmark" />

    <ImageButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:background="@android:color/transparent"
        android:foreground="?attr/selectableItemBackground"
        android:elevation="@dimen/button_elevation"
        android:outlineSpotShadowColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@id/bottomBar"
        app:layout_constraintEnd_toEndOf="@id/bottomBar"
        app:layout_constraintStart_toEndOf="@id/submit"
        app:layout_constraintTop_toTopOf="@id/bottomBar"
        app:srcCompat="@drawable/ic_next" />

    <TextView
        android:id="@+id/question"
        style="@style/questionStyle"
        android:fontFamily="@font/source_sans_pro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        tools:text="Which of the followings is not a novel by Charles Dickens?" />

    <com.oyacanli.quiz.ui.QuizRadioGroup
        android:id="@+id/options"
        android:orientation="vertical"
        style="@style/radiogroupStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/question"
        app:layout_constraintStart_toStartOf="@id/question"
        app:layout_constraintTop_toBottomOf="@+id/question" >

        <RadioButton
            android:id="@+id/optionA"
            tools:text="A Tale Of Two Cities"
            style="@style/radiobuttonStyle" />

        <RadioButton
            android:id="@+id/optionB"
            tools:text="Oliver Twist"
            style="@style/radiobuttonStyle" />

        <RadioButton
            android:id="@+id/optionC"
            tools:text="Bleak House"
            style="@style/radiobuttonStyle"/>

        <RadioButton
            android:id="@+id/optionD"
            tools:text="A Farewell To Arms"
            style="@style/radiobuttonStyle"/>

    </com.oyacanli.quiz.ui.QuizRadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>