...
    <string name="quitarrow">quit>></string>
    <string name="exitwarning">Are you sure you want to quit the game?</string>
    <string name="cancel">Cancel</string>
    <string name="timeoutwarning">Time expired. Click next for next question</string>
    <string name="hintwarning">You have already used hint.</string>
    <string name="halfwarning">You have already used 1/2 lifeline.</string>
    <string name="chosenothingwarning">You didn\'t chose any of the options.</string>
    <string name="congratulations">Congratulations %1$s! You successfully completed the quiz. You scored 100/100. If you would like compete in another category click new game.</string>
    <string name="correcttoastmessage">Correct! Click next to continue.</string>
    <string name="wronganswer">The answer was wrong. You scored %1$d /100.</string>
    <string name="newgame">New Game</string>
    <string name="rules">Rules</string>
    <string name="welcome">Welcome to <b>WHICH!</b> Chose a category from below and click start. Don\'t forget to enter your name! Check the menu for rules.</string>
...
