<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical">

        <TextView
            android:text="@string/welcome"
            style="@style/info_text_style" />

        <EditText
            android:id="@+id/name_entry"
            style="@style/edittext_style" />

        <RadioGroup
            android:id="@+id/categoriesGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/outer_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/literatureButton"
                android:background="@drawable/literaturecategory"
                android:text="@string/literature"
                style="@style/category_buttons" />

            <RadioButton
                android:id="@+id/cinemaButton"
                style="@style/category_buttons"
                android:layout_margin="@dimen/outer_margin"
                android:background="@drawable/cinemacategory"
                android:text="@string/cinema" />

            <RadioButton
                android:id="@+id/scienceButton"
                style="@style/category_buttons"
                android:background="@drawable/sciencecategory"
                android:text="@string/science" />

        </RadioGroup>

        <Button
            android:id="@+id/startButton"
            android:text="@string/start"
            style="@style/simple_button_style" />

    </LinearLayout>
</ScrollView>